# bevy_ping_pong

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
.github/workflows/: release.yaml
.zed/: tasks.json
assets/effects/: explosion.ron  test_effect.ron
src/: lib.rs  loading.rs  main.rs  prelude.rs
src/audio/: mod.rs
src/effects/: explosion.rs  mod.rs  test_effect.rs
src/entities/: components.rs  events.rs  game_states.rs  mod.rs  resources.rs
src/event_managers/: state_manager.rs
src/game_plugins/: ball.rs  camera.rs  mod.rs  player.rs
src/input/: global.rs  mod.rs  player.rs  ui.rs
src/save_manager/: game.rs  mod.rs  settings.rs
src/ui/: game_over.rs  menu.rs  mod.rs  pause.rs  score.rs  settings.rs
src/ui/components/: button.rs  label.rs  mod.rs  style.rs
src/utils/: file.rs
