[package]
name = "bevy_pong" # TODO: rename this
version = "0.1.0"
publish = false
authors = ["HunterGooD"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
debug = true
opt-level = 3

[profile.dev]
debug = true
strip = "debuginfo"
incremental = true
opt-level = 0
lto = "off"


# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = "debuginfo"

[features]
dev = [
    "bevy/dynamic_linking",
    "bevy/file_watcher",
    "bevy/asset_processor"
]

# All of Bevy's default features exept for the audio related ones (bevy_audio, vorbis), since they clash with bevy_kira_audio
#   and android_shared_stdcxx/android-game-activity, since those are covered in `mobile`
[dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_log",
    "bevy_mesh_picking_backend",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "multi_threaded",
    "png",
    "sysinfo_plugin",
    "webgl2",
    "x11",
] }
avian2d = "0.3"
leafwing-input-manager = "0.17"
moonshine-save = "0.5"
moonshine-util = "0.3"
# bevy_hanabi = "0.16" # maybe change to bevy_enoki
bevy_enoki = "0.4"
bevy_tweening = "0.13"
bevy_kira_audio = { version = "0.23.0" }
bevy_asset_loader = { version = "0.23.0" }
bevy-inspector-egui = "0.32"
bevy_reflect = "0.16"
rand = { version = "0.8.3" }

# keep the following in sync with Bevy's dependencies
winit = { version = "0.30", default-features = false }
image = { version = "0.25", default-features = false }
## This greatly improves WGPU's performance due to its heavy use of trace! calls
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Storage"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy-panic-handler = "5.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Storage"] }


[build-dependencies]
embed-resource = "1"
